--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,5 @@ requests>=2.31.0
 python-dotenv>=1.0.0
 gunicorn==21.2.0
 google-api-python-client>=2.100.0
+google-auth-oauthlib
+google-auth-httplib2
